--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7b6acd16b3.js" crossorigin="anonymous"></script>
     
     <title>Document</title>
   </head>
@@ -40,10 +41,9 @@
                   <li><a class="dropdown-item" href="#">Fizh</a></li>
                   <li><a class="dropdown-item" href="#">Monke</a></li>
                 </ul>
-                <li class="nav-item">
+                <li class="nav-item-2">
                   <a class="nav-link" href="#">Sign Up</a>
                 </li>
-              </li>
             </ul>
           </div>
         </div>
@@ -59,7 +59,7 @@
 
   <div class="mySlides fade">
     <img src="images/grouppic.png" style="width:100%">
-    <div class="text">Caption Three</div>
+    <div class="text"></div>
   </div>
   
   <div class="mySlides fade">
@@ -142,7 +142,36 @@
 </div>
 
 <footer class="footer mt-auto py-3 by-dark ">
-  
+<!-- Footer -->
+<footer class="bg-9FAD8C text-center text-white">
+  <!-- Grid container -->
+  <div class="container p-4">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-facebook-square"></i></a>
+
+      <!-- Twitter -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-twitter-square"></i></a>
+      
+      <!-- Instagram -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-instagram-square"></i></a>
+       <!-- Linkedin -->
+       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+       ><i class="fab fa-linkedin-in"></i
+     ></a>
+
+     <!-- Github -->
+     <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+       ><i class="fab fa-github"></i
+     ></a>
+   </section>
+   <!-- Section: Social media -->
+  </footer>
+  <!-- Footer -->
 </footer>
 
 
