--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!----------Navbar----------->
 
-    <nav class="navbar navbar-expand-lg bg-E8EDC3" style="background-color: #E8EDC3;">
+    <nav class="navbar navbar-expand-lg" style="background-color: #E8EDC3;">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
@@ -54,11 +54,10 @@
 
 <!-----Carousel------->
 
-
 <div class="slideshow-container">
 
   <div class="mySlides fade">
-    <img src="images/grouppic.png" style="width:100%">
+    <img src="images/grouppic.png" style="width:100%" >
     <div class="text"></div>
   </div>
   
@@ -74,8 +73,8 @@
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
   
   </div>
+
   <br>
-  
   <div style="text-align:center">
     <span class="dot" onclick="currentSlide(1)"></span> 
     <span class="dot" onclick="currentSlide(2)"></span> 
@@ -112,6 +111,8 @@
     
 <!--------End of Carousel------>
 
+
+
 <!-------Best Sellers--------->
 
 <div class="card-group">
@@ -143,7 +144,7 @@
 
 <footer class="footer mt-auto py-3 by-dark ">
 <!-- Footer -->
-<footer class="bg-9FAD8C text-center text-white">
+<footer class="text-center text-white" style="background-color: #9AC2C5;">
   <!-- Grid container -->
   <div class="container p-4">
     <!-- Section: Social media -->
